2011-09-27  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.fig:  fixed formatting errors in GUI.
	* evt_GUI.m: redefined default values for filters.

2011-09-09  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  fixed bug that crashed evt_GUI when multiple files were loaded.

2011-09-08  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: updated to use 'convert_vidtable_to_beadstruct' function

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: fixed default values for filtering data.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  fixed interface bug regarding the new "diffusivity" plot.
	* evt_GUI.fig: same.

2011-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.fig:  added 'delete outside bounding box' function (crop).
	* evt_GUI.m:   same.  also corrected bug where multiple files were reported when only loading one file.

2011-07-21  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: handles units for MSD appropriately with new video_MSD function.

2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.  instructs CVS to ignore .asv files.
	* evt_GUI.m:  can now load several specific and selected files at once.  not heavily tested yet, but seems to function as expected.

2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: updated to use new "filter_video_tracking" function.

2011-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: minor optimizations to plotting code.
	* evt_GUI.fig: same.

2011-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  removed dummy variable references, i.e. the squiggle "~", because lots of users don't have matlab with a late enough release version to use that feature.

2011-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.fig:  added msd2pt and GSER2pt figures.
	* evt_GUI.m: same.
	* evt_run_microrheology2P.m:  added.  wraps external 2pt microrheology code so that evt_GUI can use it.

2011-05-19  Jeremy Cribb <jcribb@email.unc.edu>