@@ -1,3 +1,6 @@
+2011-10-27  Jeremy Cribb <jcribb@email.unc.edu>
+	* evt_GUI.fig:  fixed figure position/location error.
+
 2011-09-27  Jeremy Cribb <jcribb@email.unc.edu>
 	* evt_GUI.fig:  fixed formatting errors in GUI.
 	* evt_GUI.m: redefined default values for filters.
